--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "repository": "git@github.com:verikono/azure-datatable-tools.git",
   "author": "Bren Norris <bnorris@enterrasolutions.com>",
   "license": "MIT",
+  "scripts": {
+    "document": "typedoc --out docs src/index.ts"
+  },
   "dependencies": {
     "@azure/data-tables": "^1.0.0-beta.5",
     "@azure/identity": "^1.2.4",
@@ -13,7 +16,10 @@
   "devDependencies": {
     "chai": "^4.3.3",
     "mocha": "^8.3.1",
+    "nyc": "^15.1.0",
     "ts-node": "^9.1.1",
+    "typedoc": "^0.20.30",
+    "typedoc-plugin-markdown": "^3.6.0",
     "typescript": "^4.2.3"
   }
 }
