--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "verikono-azure-datatable-tools",
-  "version": "0.0.2",
-  "main": "index.js",
+  "version": "0.0.3",
+  "main": "dist/index.js",
   "repository": "git@github.com:verikono/azure-datatable-tools.git",
   "author": "Bren Norris <bnorris@enterrasolutions.com>",
   "license": "MIT",
