--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "verikono-azure-datatable-tools",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "main": "dist/index.js",
   "repository": "git@github.com:verikono/azure-datatable-tools.git",
   "author": "Bren Norris <bnorris@enterrasolutions.com>",
@@ -12,6 +12,8 @@
   "dependencies": {
     "@azure/data-tables": "^12.0.0-beta.2",
     "@azure/identity": "^1.2.4",
+    "@types/node": "^15.12.2",
+    "applicationinsights": "^2.1.1",
     "dotenv": "^8.2.0"
   },
   "devDependencies": {
