--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "verikono-azure-datatable-tools",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "main": "dist/index.js",
   "repository": "git@github.com:verikono/azure-datatable-tools.git",
   "author": "Bren Norris <bnorris@enterrasolutions.com>",
@@ -10,7 +10,7 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@azure/data-tables": "^12.0.0-beta.2",
+    "@azure/data-tables": "^12.0.0",
     "@azure/identity": "^1.3.0",
     "@types/node": "^15.12.2",
     "applicationinsights": "^2.1.1",
